# Inferon

./: .gitignore  CMakeLists.txt  README.md  clean_build.py  main.cpp  setup.py
.github/workflows/: ci.yml
include/: DenseGEMM.h  InferenceEngine.h  KernelEmitter.h  Quantization.h  SparseFormat.h
python/inferon/: __init__.py
resources/: inferon_reference.md
src/: DenseGEMM.cpp  InferenceEngine.cpp  bindings.cpp
tests/: CMakeLists.txt  csr_matrix_test.cpp
tests/python/: test_gemm.py
